<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">WalkMore</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="remainingSteps"> Remaining Steps: <xliff:g example="1000" id="steps">%1$d</xliff:g></string>
    <string name="totalSteps"> <xliff:g example="1000" id="steps">%1$d</xliff:g></string>
    <string name="list_item_distance">Walked <xliff:g example="1000" id="steps">%1$s</xliff:g> km</string>
    <string name="list_item_steps">Steps: <xliff:g example="1000" id="steps">%1$d</xliff:g>;</string>
    <string name="today">Today</string>
    <string name="total">Total Steps</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home" tools:ignore="MissingTranslation">@string/Home</string>
    <string name="nav_data" tools:ignore="MissingTranslation">@string/history_data</string>
    <string name="nav_goal" tools:ignore="MissingTranslation">@string/dailygoal</string>
    <string name="nav_settings" tools:ignore="MissingTranslation">@string/settings</string>
    <string-array name="nav_item_activity_titles" tools:ignore="MissingTranslation">
        <item>@string/Home</item>
        <item>@string/history_data</item>
        <item>@string/dailygoal</item>
        <item>@string/settings</item>
        
        <item>Settings</item>
    </string-array>
    <string name="Home">Home</string>
    <string name="history_data">History Data</string>
    <string name="dailygoal">Daily Goal</string>
    <string name="action_logout">Logout</string>
    <string name="daily_goal">Set Daily Goal</string>
    <string name="empty_list">No fitness data found</string>
    <string name="action_history">Analyze Data</string>
    <string name="string_weeks">Week</string>
    <string name="string_months">Month</string>
    <string name="string_year">Year</string>
    <string name="content_authority" translatable="false">com.example.manvi.walkmore</string>
    <string name="yAxis_string">Steps</string>
    <string name="setting_title">Units</string>
    <string name="setting_history">History Data</string>
    <string name="pref_height_label">Height</string>
    <string name="pref_height_key" translatable="false">height</string>
    <string name="pref_height_value_key" translatable="false">height_value</string>
    <string name="pref_weight_label">Weight</string>
    <string name="pref_weight_key" translatable="false">weight</string>
    <string name="pref_weight_value_key" translatable="false">weight_value</string>
    <string name="pref_duration_value_key" translatable="false">duration_value</string>
    <string name="pref_distance_label">Distance</string>
    <string name="pref_distance_key" translatable="false">distance</string>
    <string name="pref_history_label">Delete History Data</string>
    <string name="pref_history_key" translatable="false">history</string>
    <string name="pref_history_summary_off">History Off</string>
    <string name="pref_history_summary_on">History On</string>
    <string name="pref_units_feet" translatable="false">feet</string>
    <string name="pref_units_Centimeter" translatable="false">centimeter</string>
    <string name="pref_units_label_feet">Feet n Inch</string>
    <string name="pref_units_label_centi">Centimeter</string>
    <string name="pref_units_kg" translatable="false">kilo</string>
    <string name="pref_units_pound" translatable="false">pounds</string>
    <string name="pref_units_label_kg">Kilograms</string>
    <string name="pref_units_label_pound">Pounds</string>
    <string name="pref_units_km" translatable="false">kilometer</string>
    <string name="pref_units_mile" translatable="false">mile</string>
    <string name="pref_units_label_km">Kilometer(km)</string>
    <string name="pref_units_label_mile">Miles(mi)</string>
    <string name="basic_info">Basic Information</string>
    <string name="height_info">Height</string>
    <string name="centimeter">centimeters</string>
    <string name="weight_info">Weight</string>
    <string name="pounds" translatable="false">lb</string>
    <string name="kilogram" translatable="false">kg</string>
    <string name="enter_height">Enter Height</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="invaild_value">Invalid value</string>
    <string name="no_internet">Please check your settings.</string>
    <string name="no_Connectivity">No Internet Connection</string>
    <string name="feet_message">Enter a value for feet between 1 and 8</string>
    <string name="weight_message">Enter a value for weight between 1 and 1000</string>
    <string name="centimeter_message">Enter a value for centimeter between 30 and 272</string>
    <string name="kg_message">Enter a value for kilogram between 1 and 450</string>
    <string name="enter_mandatory_info">Below information is mandatory for app to work </string>
    <string name="ad_unitId" translatable="false">ca-app-pub-4862241919033566/2684536934</string>
    <string name="send_to">Send Text to..</string>
    <string name="graph_description">Steps over period</string>
    <string name="ads">displaying ads</string>
    <string name="a11y_remaining_step">Remaining Steps for today <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_daily_steps">Steps today <xliff:g id="condition">%1$d</xliff:g></string>
    <string name="a11y_daily_distance">Distance covered today <xliff:g id="high">%1$f</xliff:g></string>
    <string name="a11y_daily_calorie">Calories burnt today: <xliff:g id="low">%1$d</xliff:g></string>
    <string name="a11y_content_distance">distance</string>
    <string name="a11y_content_calorie">Calorie</string>
    <string name="a11y_content_duration">Duration</string>
    <string name="a11y_content_bmi">BMI</string>
    <string name="a11y_list_item_distance">Walked <xliff:g example="1000" id="steps">%1$s</xliff:g> km</string>
    <string name="a11y_list_item_steps">Steps: <xliff:g example="1000" id="steps">%1$d</xliff:g>;</string>
    <string name="a11y_list_item_calories"><xliff:g example="1000" id="steps">%1$d</xliff:g></string>
    <string name="a11y_bmi">Your BMI is <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_today_date">Date <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_profile_picture">profile picture</string>
    <string name="a11y_name"><xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_emailId"><xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_previous_screen">Go Back To Home Screen</string>
    <string name="a11_height_in_Feet">Height is <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11_height_in_Inch">Inch  <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11_weight">Weight  <xliff:g id="humidity">%1$f</xliff:g></string>
    <string name="a11y_target_acheived">Target Achieved</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="analyze_data">Analyze Data</string>
    <string name="home_screen" translatable="false">Home Screen</string>
    <string name="graph_screen" translatable="false">Graph Screen</string>
    <string name="history_screen" translatable="false">History Screen</string>
    <string name="setting_screen" translatable="false">Settings Screen</string>
    <string name="edit_screen" translatable="false">Edit Screen</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="duration">Duration</string>
    <string name="bmi">BMI</string>
    <string name="total_distance"><xliff:g id="100.12">%1$.2f</xliff:g> km</string>
    <string name="total_distanceInmiles"><xliff:g id="100.12">%1$.2f</xliff:g> mi</string>
    <string name="total_duration"><xliff:g id="100">%1$.0f</xliff:g> min</string>
    <string name="total_calories" tools:ignore="PluralsCandidate"><xliff:g id="distance">%1$d</xliff:g> kcal</string>
    <string name="total_bmi"><xliff:g id="100.12">%1$.2f</xliff:g></string>
    <string name="underweight">(Underweight)</string>
    <string name="normal">(Normal)</string>
    <string name="overweight">(OverWeight)</string>
    <string name="zero" tools:ignore="MissingTranslation">0</string>
    <string name="Ok">OK</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="message">You reached your goal. Do you want to increase target for a day?</string>
    <string name="sign_in_unsuccessful">Unsuccessful Sign In</string>
    <string name="pref_notification_sent_key" translatable="false">notification sent</string>
    <string name="hint" translatable="false">1</string>
    <string name="share" translatable="false">Share</string>
    <string name="options" translatable="false">Options</string>
    <string name="save" translatable="false">Save</string>
    <string name="person_name_key" translatable="false">person_name</string>
    <string name="person_email_key" translatable="false">person_email</string>
    <string name="person_photo_key" translatable="false">person_photo</string>
    <string name="height_summary">change the units of height</string>
    <string name="weight_summary">change the units of weight</string>
    <string name="distance_summary">change the units of distance</string>
    <string name="target_complete_message" tools:ignore="PluralsCandidate">Hey, I have completed<xliff:g id="steps">%1$d</xliff:g>steps. What is your count? Lets walk more buddy.</string>
    <string name="logout">Logout user!</string>
    <string name="goal_updated">Daily Goal Updated</string>
    <string name="remainingSteps1"> Remaining Steps:0</string>
    <string name="totalSteps1" translatable="false">0</string>
    <string name="distance1">0 km</string>
    <string name="calorie1">0 kcal</string>
    <string name="duration1">0 min</string>
    <string name="wait">Wait.....</string>
    <string name="steps_key" translatable="false">steps</string>
    <string name="ActivityPREF1_key" translatable="false">ActivityPREF1</string>
    <string name="firstTimeValue_key" translatable="false">firstTimeValue</string>
    <string name="firstTimeLogin_key" translatable="false">firstTimeLogin</string>
    <string name="daily_goal_key" translatable="false">daily_goal</string>
    <string name="total_steps_key" translatable="false">total_steps</string>
    <string name="last_total_steps_key" translatable="false">last_total_steps</string>
    <string name="ActivityPREF_key" translatable="false">ActivityPREF</string>
    <string name="firstRun_key" translatable="false">firstRun</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="no_thanks">No,thanks.</string>
    <string name="yes">Yes!</string>
    <string name="Edit_goal_hint">Enter your daily steps target.</string>
    <string name="enter_valid_goal">Please enter vaild target range. Daily Goals cant be zero</string>
    <string name="enter_goal_error">please enter the goal greater than 0</string>
</resources>