<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/setting_title">

       <ListPreference
            android:defaultValue="@string/pref_units_feet"
            android:entries="@array/pref_height_options"
            android:entryValues="@array/pref_height_values"
            android:key="@string/pref_height_key"
            android:summary="@string/height_summary"
            android:title="@string/pref_height_label" />

        <ListPreference
            android:defaultValue="@string/pref_units_pound"
            android:entries="@array/pref_weight_options"
            android:entryValues="@array/pref_weight_values"
            android:key="@string/pref_weight_key"
            android:summary="@string/weight_summary"
            android:title="@string/pref_weight_label" />

        <ListPreference
            android:defaultValue="@string/pref_units_km"
            android:entries="@array/pref_distance_options"
            android:entryValues="@array/pref_distance_values"
            android:key="@string/pref_distance_key"
            android:summary="@string/distance_summary"
            android:title="@string/pref_distance_label" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_history">

        <SwitchPreference
            android:defaultValue="@bool/pref_history_default"
            android:key="@string/pref_history_key"
            android:summaryOff="@string/pref_history_summary_off"
            android:summaryOn="@string/pref_history_summary_on"
            android:title="@string/pref_history_label"
            android:elevation="@dimen/switch_elevation"
            tools:ignore="UnusedAttribute" />
    </PreferenceCategory>
</PreferenceScreen>