<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_history_black_24px"
            android:title="@string/nav_data" />
        <item
            android:id="@+id/nav_goal"
            android:icon="@drawable/ic_target"
            android:title="@string/nav_goal" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24px"
            android:title="@string/nav_settings" />
    </group>
</menu>