<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grid_background"
    android:stretchMode="columnWidth"
    app:columnCount="2"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/distance_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/civ_boarder_width"
        android:layout_marginEnd="@dimen/civ_boarder_width"
        android:layout_marginRight="@dimen/civ_boarder_width"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_bottom"
        android:paddingTop="@dimen/margin_top"
        app:layout_columnWeight="1"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/a11y_content_distance"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_distance" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calorie_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/civ_boarder_width"
        android:layout_marginLeft="@dimen/civ_boarder_width"
        android:layout_marginStart="@dimen/civ_boarder_width"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_bottom"
        android:paddingTop="@dimen/margin_top"
        app:layout_columnWeight="1"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/a11y_content_calorie"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_flame" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/calorie_Count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calorie1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/durationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/civ_boarder_width"
        android:layout_marginRight="@dimen/civ_boarder_width"
        android:layout_marginTop="@dimen/civ_boarder_width"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_bottom"
        android:paddingTop="@dimen/margin_top"
        app:layout_columnWeight="1"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/a11y_content_duration"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_clockwise_rotation" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bmi_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/civ_boarder_width"
        android:layout_marginStart="@dimen/civ_boarder_width"
        android:layout_marginTop="@dimen/civ_boarder_width"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_bottom"
        android:paddingTop="@dimen/margin_top"
        app:layout_columnWeight="1"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/a11y_content_bmi"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_bmi" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/bmi_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/bmi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.GridLayout>