<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/touch_selector"
    android:clickable="true"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingStart="@dimen/abc_list_item_padding_horizontal_material"
    tools:ignore="PrivateResource">

    <ImageView
        android:id="@+id/list_item_icon"
        android:layout_width="@dimen/list_icon"
        android:layout_height="@dimen/list_icon"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
        android:contentDescription="@string/yAxis_string"
        android:src="@drawable/ic_footsteps"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_distance_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            tools:text="@string/list_item_distance" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/list_item_steps_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/secondary_text"
                tools:text="@string/list_item_steps" />

            <TextView
                android:id="@+id/list_item_calorie_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginStart="@dimen/eight_dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/secondary_text"
                tools:ignore="RtlHardcoded"
                tools:text="@string/total_calories" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/list_item_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:gravity="right|end"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/secondary_text"
        tools:ignore="RtlHardcoded"
        tools:text="22/05/2017" />
</LinearLayout>
